Fix for Bminer URI formate
Changed stratum to algo.

--- a/templates/pimp8.tmpl
+++ b/templates/pimp8.tmpl
@@ -16,7 +16,7 @@ NAME={{.NAME}}
 # POOL INFORMATION:
 
 # {{.POOLNAME}}
-  USER1={{.STRATUM}}://{{.WALLET}}.{{.WORKER}}:{{.PASS}}@{{.POOLURL}}:{{.PORT}}
+  USER1={{.ALGO}}://{{.WALLET}}.{{.WORKER}}:{{.PASS}}@{{.POOLURL}}:{{.PORT}}
   ALGO1={{.ALGO}}
 
 # Custom Pool
