--- a/templates/pimp6.tmpl
+++ b/templates/pimp6.tmpl
@@ -5,42 +5,64 @@
 # |  |_> >  |  Y Y  \  |_> >     Support: forum.getpimp.org
 # |   __/|__|__|_|  /   __/    Copyright (c) 2020 getPiMP.org
 # |__|            \/|__|
-# This file makes it easy for you to pick your wallet and pool.
+#
+# This file makes it easy for you to setup your wallet and pool.
+#
 # DISCLAIMER: MINING IS DANGEROUS: TAKE PRECAUTIONS AND TEST THOROUGHLY.
 # PIMP ASSUMES NO LIABILITY FOR ANY DAMAGES CAUSED BY MINING.
+#
 # ==================================================================
+## CONFIG NAME: (Do Not Change)
 
 NAME={{.NAME}}
 
 # ==================================================================
-# POOL INFORMATION:
+## POOL INFORMATION:
+#
+#  Test Pool: ------------------------------------------------
+#	Enabled by default.
+#	This section is for miner/hardware testing only.
+#	No crypto is earned from this pool/configuration.
+#	Modification of this section is not recommended.
 
 # {{.POOLNAME}}
-  POOL1={{.STRATUM}}://{{.POOLURL}}:{{.PORT}}
-  USER1={{.WALLET}}.{{.WORKER}}
-  PASS1={{.PASS}}
 
-# Custom Pool
-#  (Worker is duplicated in FLAGS as "-r <worker>" and Algo is specified in FLAGS as "--currency <algo>".)
-# POOL1=<stratum>://<poolurl>:<port>
-# USER1=<wallet>.<worker>
-# PASS1=<pass>
-#
-# ==================================================================
-# FLAG INFORMATION:
+	POOL1={{.STRATUM}}://{{.POOLURL}}:{{.PORT}}
+	USER1={{.WALLET}}.{{.WORKER}}
+	PASS1={{.PASS}}
 
-FLAGS={{.FLAGS}} -r {{.WORKER}} --currency {{.ALGO}}
+#  User Pool: ------------------------------------------------
+#	This section is for actual mining.
+#	Disable Test Pool above prior to use.
+#	Adjust the below scheme with your mining information.
 
-# ==================================================================
+# <pool_name> - <coin>
+
+#	POOL1=<stratum>://<poolurl>:<port>
+#	USER1=<wallet>.<worker>
+#	PASS1=<pass>
+
 # Notes:
+#	Miner Algo selection goes in FLAGS= (--currency <algo>)
+#	Worker also goes in FLAGS= (-r <worker>)
+
+# ==================================================================
+## FLAG INFORMATION:
+
+ FLAGS={{.FLAGS}} -r {{.WORKER}} --currency {{.ALGO}}
+
+# ==================================================================
+## MINER HELP OUTPUT: (For Information Only)
 #
-#  {{.NOTES}}
+{{.NOTES}}
 #
 # ==================================================================
+## INTERNAL USE ONLY: (Do Not Change)
 #
-# INTERNAL USE ONLY: modification below here is unadvised
 TYPE={{.TYPE}}
 DIR={{.DIR}}
 BINARY={{.BINARY}}
 CONF={{.CONF}}
 API={{.API}}
+
+# {{.TIMESTAMP}}
