--- a/templates/pimp9.tmpl
+++ b/templates/pimp9.tmpl
@@ -5,43 +5,65 @@
 # |  |_> >  |  Y Y  \  |_> >     Support: forum.getpimp.org
 # |   __/|__|__|_|  /   __/    Copyright (c) 2020 getPiMP.org
 # |__|            \/|__|
-# This file makes it easy for you to pick your wallet and pool.
+#
+# This file makes it easy for you to setup your wallet and pool.
+#
 # DISCLAIMER: MINING IS DANGEROUS: TAKE PRECAUTIONS AND TEST THOROUGHLY.
 # PIMP ASSUMES NO LIABILITY FOR ANY DAMAGES CAUSED BY MINING.
+#
 # ==================================================================
+## CONFIG NAME: (Do Not Change)
 
 NAME={{.NAME}}
 
 # ==================================================================
-# POOL INFORMATION:
+## POOL INFORMATION:
+#
+#  Test Pool: ------------------------------------------------
+#	Enabled by default.
+#	This section is for miner/hardware testing only.
+#	No crypto is earned from this pool/configuration.
+#	Modification of this section is not recommended.
 
 # {{.POOLNAME}}
-  POOL1={{.POOLURL}}:{{.PORT}}
-  USER1={{.WALLET}}.{{.WORKER}}
-  PASS1={{.PASS}}
-  ALGO1={{.ALGO}}
 
-# Custom Pool
-# POOL1=<stratum>://<poolurl>:<port>
-# USER1=<wallet>.<worker>
-# PASS1=<pass>
-# ALGO1=<algo>
-#
-# ==================================================================
-# FLAG INFORMATION:
+	POOL1={{.POOLURL}}:{{.PORT}}
+	USER1={{.WALLET}}.{{.WORKER}}
+	PASS1={{.PASS}}
+	ALGO1={{.ALGO}}
 
-FLAGS={{.FLAGS}}
+#  User Pool: ------------------------------------------------
+#	This section is for actual mining.
+#	Disable Test Pool above prior to use.
+#	Adjust the below scheme with your mining information.
 
-# ==================================================================
+# <pool_name> - <coin>
+
+#	POOL1=<poolurl>:<port>
+#	USER1=<wallet>.<worker>
+#	PASS1=<pass>
+#	ALGO1=<algo>
+
 # Notes:
+#	No Stratum in POOL1=
+	
+# ==================================================================
+## FLAG INFORMATION:
+
+ FLAGS={{.FLAGS}}
+
+# ==================================================================
+## MINER HELP OUTPUT: (For Information Only)
 #
-#  {{.NOTES}}
+{{.NOTES}}
 #
 # ==================================================================
+## INTERNAL USE ONLY: (Do Not Change)
 #
-# INTERNAL USE ONLY: modification below here is unadvised
 TYPE={{.TYPE}}
 DIR={{.DIR}}
 BINARY={{.BINARY}}
 CONF={{.CONF}}
 API={{.API}}
+
+# {{.TIMESTAMP}}
