Removed --pers flag
The `--pers` is now part of the "Special" value within pimppools.json.

--- a/templates/pimp4.tmpl
+++ b/templates/pimp4.tmpl
@@ -52,7 +52,7 @@ NAME={{.NAME}}
 # ==================================================================
 ## FLAG INFORMATION:
 
- FLAGS={{.FLAGS}} --port {{.PORT}} --pers {{.SPECIAL}}
+ FLAGS={{.FLAGS}} --port {{.PORT}} {{.SPECIAL}}
 
 # ==================================================================
 ## MINER HELP OUTPUT: (For Information Only)
